# SofaRHI

./: AUTHORS  CMakeLists.txt  README.md  SofaRHIConfig.cmake.in
examples/: RHIModel.scn
src/SofaRHI/: DisabledObject.cpp  DisabledObject.h  DrawToolRHI.cpp  DrawToolRHI.h  RHIComputeModel.h  RHIComputeVisitor.cpp  RHIComputeVisitor.h  RHIGraphicVisitor.cpp  RHIGraphicVisitor.h  RHIMeshGenerator.cpp  RHIMeshGenerator.h  RHIMeshGenerator.inl  RHIModel.cpp  RHIModel.h  RHIObject.cpp  RHIObject.h  RHIUtils.cpp  RHIUtils.h  RHIVisualManagerLoop.cpp  RHIVisualManagerLoop.h  RHIVisualModel.h  RHIVisualParams.cpp  RHIVisualParams.h  RHIVisualVisitor.cpp  RHIVisualVisitor.h  config.h.in  initSofaRHI.cpp
src/SofaRHI/gui/: RHIBackend.cpp  RHIBackend.h  RHIGUIUtils.cpp  RHIGUIUtils.h  RHIOffscreenViewer.cpp  RHIOffscreenViewer.h  RHIPickHandler.cpp  RHIPickHandler.h  RHIViewer.cpp  RHIViewer.h
src/SofaRHI/rhi/: qtresources.qrc
src/SofaRHI/rhi/computeshaders/gl/: compute_normals.comp  compute_normals.comp.qsb
src/SofaRHI/rhi/shaders/gl/: compileQSB.sh  phong.frag  phong.frag.qsb  phong.vert  phong.vert.qsb  phong_color.frag  phong_color.frag.qsb  phong_color.vert  phong_color.vert.qsb  phong_color_instanced.vert  phong_color_instanced.vert.qsb  phong_diffuse_texture.frag  phong_diffuse_texture.frag.qsb  phong_diffuse_texture.vert  phong_diffuse_texture.vert.qsb  simple.frag.qsb  simple.vert.qsb  simple_color.frag  simple_color.frag.qsb  simple_color.vert  simple_color.vert.qsb  simple_matrix.vert  simple_matrix.vert.qsb
